# smash

./: .gitignore  Cargo.toml  README.md  build.rs  make.sh
call_celo/: go.mod  go.sum  lib.go
call_geth/: go.mod  go.sum  lib.go
celo_bindings/: Makefile  go.mod  go.sum  lib.go
geth_bindings/: Makefile  go.mod  go.sum  lib.go
src/: call.rs  celo.rs  cli.rs  errors.rs  fuzzer.rs  geth.rs  lib.rs  traits.rs
src/targets/: identity.rs  mod.rs  sha256.rs
src/targets/cip20/: blake2Xs.rs  blake2s.rs  mod.rs
