[package]
name = "smash"
version = "0.1.0"
authors = ["James Prestwich <prestwich@clabs.co>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lain = "0.5"
ctrlc = "3.1"
rand = "0.7.3"
console = "0.12"
hex = "0.4"
sha2 = "0.9.2"
sha3 = "0.9.1"
lazy_static = "1.4.0"
blake2s_simd = "0.5.8"
thiserror = "1.0.22"
clap = "3.0.0-beta.2"

[[bin]]
name = "identity"
path = "bin/identity.rs"
test = false
bench = false

[[bin]]
name = "sha256"
path = "bin/sha256.rs"
test = false
bench = false

[[bin]]
name = "cip20"
path = "bin/cip20.rs"
test = false
bench = false